tests/errors/semantic/blocking/ex2.py

e2 = y[2] + 3
y[0] = 1
